conexion con bd online

--- a/sgha/.env.example
+++ b/sgha/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=taller
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=ep-odd-moon-acswkeet-pooler.sa-east-1.aws.neon.tech
+DB_PORT=5432
+DB_DATABASE=sgha
+DB_USERNAME=neondb_owner
+DB_PASSWORD=npg_AfDHL4uNMX1c
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
